WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79734
:empty still applies to elements made non-empty via page dynamics
https://bugs.webkit.org/show_bug.cgi?id=79734
Summary
:empty still applies to elements made non-empty via page dynamics
noel gordon
Reported
2012-02-27 19:05:14 PST
Create empty elements with :empty class styling. These elements don't display as expected. Change the content of the elements using js to make them non-empty. The elements still don't display and they should. Reproduction Steps: 1) Open test case, two green boxes are shown. 2) Click on the page. Expected result: Three green boxes should appear. Actual result: The third green box does not appear.
Attachments
test case
(709 bytes, text/html)
2012-02-27 19:06 PST
,
noel gordon
no flags
Details
ProposedPatch
(3.85 KB, patch)
2012-02-29 13:04 PST
,
Joe Thomas
no flags
Details
Formatted Diff
Diff
Patch
(2.62 KB, patch)
2012-03-01 20:44 PST
,
noel gordon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
noel gordon
Comment 1
2012-02-27 19:06:28 PST
Created
attachment 129164
[details]
test case
noel gordon
Comment 2
2012-02-27 19:08:50 PST
***
Bug 79730
has been marked as a duplicate of this bug. ***
noel gordon
Comment 3
2012-02-27 19:23:29 PST
Other browsers tested: Safari 5.1.2 (6534.52.7, 535+) : FAIL Chrome 19.0.1049.3 dev Mac : FAIL Firefox 10.0.2 Mac : OK IE9/10 Win: OK
Joe Thomas
Comment 4
2012-02-29 13:04:05 PST
Created
attachment 129498
[details]
ProposedPatch
WebKit Review Bot
Comment 5
2012-03-01 09:53:57 PST
Comment on
attachment 129498
[details]
ProposedPatch Rejecting
attachment 129498
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/11770534
Joe Thomas
Comment 6
2012-03-01 10:28:14 PST
Can someone help me to land this patch? It failed at the commit-queue with false error.
noel gordon
Comment 7
2012-03-01 13:51:24 PST
Done, looks fine this time round.
WebKit Review Bot
Comment 8
2012-03-01 13:53:40 PST
Comment on
attachment 129498
[details]
ProposedPatch Clearing flags on attachment: 129498 Committed
r109417
: <
http://trac.webkit.org/changeset/109417
>
WebKit Review Bot
Comment 9
2012-03-01 13:53:47 PST
All reviewed patches have been landed. Closing bug.
noel gordon
Comment 10
2012-03-01 13:55:10 PST
For the record, fast/css/pseudo-empty-display-none.html tests the static :empty display:none case.
Joe Thomas
Comment 11
2012-03-01 14:06:07 PST
(In reply to
comment #7
)
> Done, looks fine this time round.
Thanks!
noel gordon
Comment 12
2012-03-01 20:41:34 PST
(In reply to
comment #11
)
> Thanks!
Thinking we should add a test for the reverse case for completeness: non-empty elements should gain :empty style if made empty by page dynamics.
noel gordon
Comment 13
2012-03-01 20:43:59 PST
Reopening to attach new patch.
noel gordon
Comment 14
2012-03-01 20:44:06 PST
Created
attachment 129802
[details]
Patch
WebKit Review Bot
Comment 15
2012-03-02 18:57:46 PST
Comment on
attachment 129802
[details]
Patch Rejecting
attachment 129802
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: _by_email return self._reviewer_only(self.account_by_email(email)) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 632, in account_by_email return self._email_to_account_map().get(email.lower()) if email else None File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/common/config/committers.py", line 525, in _email_to_account_map assert(email not in self._accounts_by_email) # We should never have duplicate emails. AssertionError Full output:
http://queues.webkit.org/results/11801214
noel gordon
Comment 16
2012-03-02 19:29:44 PST
Comment on
attachment 129802
[details]
Patch Clearing flags on attachment: 129802 Committed
r109651
: <
http://trac.webkit.org/changeset/109651
>
noel gordon
Comment 17
2012-03-02 19:29:56 PST
All reviewed patches have been landed. Closing bug.
David Barr
Comment 18
2012-04-26 18:48:13 PDT
***
Bug 75294
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug