:empty still applies to elements made non-empty via page dynamics. https://bugs.webkit.org/show_bug.cgi?id=79734

Check for :empty style change should be made even if the RenderStyle for the element is NULL
as changes to the element's children can trigger a change in :empty state of the parent element.

Patch by Joe Thomas <joethomas@motorola.com> on 2012-03-01
Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/selectors/empty-element-made-non-empty.html

* dom/Element.cpp:
(WebCore::checkForSiblingStyleChanges):

LayoutTests:

* fast/selectors/empty-element-made-non-empty-expected.txt: Added.
* fast/selectors/empty-element-made-non-empty.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@109417 bbb929c8-8fbe-4397-9dbb-9b2b20218538